Migrate plugins page to material and some fixes
Fix if components in sidenav is large - sidenav is stretched

--- a/eform-client/src/scss/styles.scss
+++ b/eform-client/src/scss/styles.scss
@@ -349,6 +349,15 @@ body.theme-dark {
     background-color: white;
   }
 }
+.mat-drawer-inner-container {
+  width: 240px !important;
+  max-width: 240px;
+
+  a.nav-link span.mat-button-wrapper {
+    white-space: pre-wrap;
+  }
+}
+
 
 body {
   --theme-primary-color-h: 26.53846154;
